Fix (ui) :-  Tag dropdown overflow issue and added localisation (#8173)
* Fix Tag dropdown overflow issue and added localisation

* added missing colon

--- a/openmetadata-ui/src/main/resources/ui/src/styles/app.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/app.less
@@ -99,6 +99,9 @@
 .w-full {
   width: 100%;
 }
+.w-max-256 {
+  max-width: 256px;
+}
 
 //Height
 .h-7 {
